Red button update v1
hopefully red button work

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <hr>
       <h2>Get in touch!</h2>
       <h4>Here to answer all your questions!</h4>
-      <a href="mailto:GTANI@schools.vic.edu.au" class="myButton">Contact Me</a>
+      <a href="GTANI@schools.vic.edu.au" class="myButton">Contact me</a>
       <div class="footer">
         <p id="copyright">© Gitansh Taneja 2021</p>
       </div>
